WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
36743
[chromium] pass a WebFrame to WebFrameClient::allowDatabase instead of a WebSecurityOrigin
https://bugs.webkit.org/show_bug.cgi?id=36743
Summary
[chromium] pass a WebFrame to WebFrameClient::allowDatabase instead of a WebS...
jochen
Reported
2010-03-29 01:20:33 PDT
[chromium] pass a WebFrame to WebFrameClient::allowDatabase instead of a WebSecurityOrigin
Attachments
Patch
(2.42 KB, patch)
2010-03-29 01:21 PDT
,
jochen
no flags
Details
Formatted Diff
Diff
Patch
(2.68 KB, patch)
2010-03-29 01:26 PDT
,
jochen
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
jochen
Comment 1
2010-03-29 01:21:41 PDT
Created
attachment 51882
[details]
Patch
jochen
Comment 2
2010-03-29 01:26:05 PDT
Created
attachment 51883
[details]
Patch
jochen
Comment 3
2010-03-29 04:26:50 PDT
This bug addresses the issues raised in #36595
Jeremy Orlow
Comment 4
2010-03-29 04:29:56 PDT
Comment on
attachment 51883
[details]
Patch Actually, might as well just wait to see if Darin thinks this addresses all of his concerns.
WebKit Commit Bot
Comment 5
2010-03-29 10:14:00 PDT
Comment on
attachment 51883
[details]
Patch Clearing flags on attachment: 51883 Committed
r56728
: <
http://trac.webkit.org/changeset/56728
>
WebKit Commit Bot
Comment 6
2010-03-29 10:14:04 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug