2010-03-29  Jochen Eisinger  <jochen@chromium.org>

Reviewed by Darin Fisher.

        Pass a WebFrame to WebFrameClient::allowDatabase instead of a WebSecurityOrigin
        https://bugs.webkit.org/show_bug.cgi?id=36743

        * public/WebFrameClient.h:
        (WebKit::WebFrameClient::allowDatabase):
        * src/DatabaseObserver.cpp:
        (WebCore::DatabaseObserver::canEstablishDatabase):

Canonical link: https://commits.webkit.org/48022@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@56728 268f45cc-cd09-0410-ab3c-d52691b4dbfc